--- a/transfer/.gitignore
+++ b/transfer/.gitignore
@@ -1,8 +1,5 @@
 Thumbs.db
 .DS_Store
-.gradle
-build/
-target/
 out/
 .idea
 *.iml
@@ -11,3 +8,19 @@ out/
 .project
 .settings
 .classpath
+
+###########################################################################################################
+# Gradle from https://github.com/github/gitignore/blob/master/Gradle.gitignore
+###########################################################################################################
+.gradle
+target/
+build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
