Add AccountController, refactoring: replace Optional to Exception in accountService.findById

--- a/transfer/src/main/resources/application.yml
+++ b/transfer/src/main/resources/application.yml
@@ -11,3 +11,6 @@ flyway:
   datasources:
     default:
       locations: classpath:databasemigrations
+jackson:
+  serialization:
+    writeDatesAsTimestamps: false
