--- a/transfer/build.gradle
+++ b/transfer/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id "io.freefair.lombok" version "5.0.0-rc2"
     id 'java-library'
     id "org.flywaydb.flyway" version "6.2.4"
+    id 'jacoco'
 
 }
 java {
@@ -17,7 +18,7 @@ ext{
     junitVersion = '5.6.0'
     logbackVersion = '1.2.3'
     assertjVersion = '3.11.1'
-    mockitoVersion = '2.16.0'
+    mockitoVersion = '3.3.0'
     mockitoJunitVersion = '2.17.0'
     modelMapperVersion = '2.17.0'
     modelMapperJooqVersion = '2.3.6'
@@ -103,3 +104,5 @@ tasks.withType(JavaExec) {
     classpath += configurations.developmentOnly
     jvmArgs('-noverify', '-XX:TieredStopAtLevel=1', '-Dcom.sun.management.jmxremote')
 }
+
+test.finalizedBy jacocoTestReport
