--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ plugins {
     id 'java-library'
     id "org.flywaydb.flyway" version "6.2.4"
     id 'jacoco'
+    id 'maven'
+
 
 }
 java {
@@ -105,4 +107,9 @@ tasks.withType(JavaExec) {
     jvmArgs('-noverify', '-XX:TieredStopAtLevel=1', '-Dcom.sun.management.jmxremote')
 }
 
-test.finalizedBy jacocoTestReport
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled false
+    }
+}
